added list links to home

--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -14,7 +14,7 @@
                                 <thead>
                                     <tr>
                                         <td class="listingRow">Title</td>
-                                        <td class="listingRow">Author</td>
+                                        <td class="listingRow">Authors</td>
                                         <td class="listingRow">Publisher</td>
                                         <td class="listingRow">Year</td>
                                         <td style="text-align: right;">Write your filename</td>
