--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -15,7 +15,7 @@
                                     <tr>
                                         <td class="listingRow">Title</td>
                                         <td class="listingRow">Book title</td>
-                                        <td class="listingRow">Author</td>
+                                        <td class="listingRow">Authors</td>
                                         <td class="listingRow">Year</td>
                                         <td style="text-align: right;">Write your filename</td>
                                     </tr>
