fixed broken links

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
                                 <p class="description">Create and manage article references</p>
                                 <a th:href="@{/article/add}" class="learn-more" name='createArticle'>Create »</a>
                                 <br/>
-                                <a th:href="@{/inpros}" class="learn-more" name='createInproceeding'>List »</a>
+                                <a th:href="@{/articles}" class="learn-more" name='listArticle'>List »</a>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 item">
@@ -25,7 +25,7 @@
                                 <p class="description">Create and manage book references</p>
                                 <a th:href="@{/book/add}" class="learn-more" name='createBook'>Create »</a>
                                 <br/>
-                                <a th:href="@{/inpros}" class="learn-more" name='createInproceeding'>List »</a>
+                                <a th:href="@{/books" class="learn-more" name='listBook'>List »</a>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 item">
@@ -35,7 +35,7 @@
                                 <p class="description">Create and manage inproceeding references</p>
                                 <a th:href="@{/inpro/add}" class="learn-more" name='createInproceeding'>Create »</a>
                                 <br/>
-                                <a th:href="@{/inpros}" class="learn-more" name='createInproceeding'>List »</a>
+                                <a th:href="@{/inpros}" class="learn-more" name='listInproceeding'>List »</a>
                             </div>
                         </div>
                     </div>
