--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
                                 <p class="description">Create and manage book references</p>
                                 <a th:href="@{/book/add}" class="learn-more" name='createBook'>Create »</a>
                                 <br/>
-                                <a th:href="@{/books" class="learn-more" name='listBook'>List »</a>
+                                <a th:href="@{/books}" class="learn-more" name='listBook'>List »</a>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 item">
