--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@ and open the template in the editor.
         <div>
             <nav class="navbar navbar-default navigation-clean">
                 <div class="container">
-                    <div class="navbar-header"><a th:href="@{/}" class="navbar-brand navbar-link">BibFrog </a>
+                    <div class="navbar-header"><a th:href="@{/}" name="frontpage" class="navbar-brand navbar-link">BibFrog</a>
                         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span><span class="icon-bar"></span>
@@ -30,9 +30,9 @@ and open the template in the editor.
                     </div>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li role="presentation"><a th:href="@{/inpros}">Inproceedings</a></li>
-                            <li role="presentation"><a th:href="@{/books}">Books</a></li>
-                            <li role="presentation"><a th:href="@{/articles}">Articles</a></li>
+                            <li role="presentation"><a th:href="@{/inpros}" name="navbarInpros">Inproceedings</a></li>
+                            <li role="presentation"><a th:href="@{/books}" name="navbarBooks">Books</a></li>
+                            <li role="presentation"><a th:href="@{/articles}" name ="navbarArticles">Articles</a></li>
                         </ul>
                     </div>
                 </div>
