--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -17,7 +17,6 @@
                                         <td class="listingRow">Book title</td>
                                         <td class="listingRow">Authors</td>
                                         <td class="listingRow">Year</td>
-                                        <td style="text-align: right;">Download bibtex</td>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -42,7 +41,7 @@
                                                             <h4 class="modal-title">Download bibtex</h4>
                                                         </div>
                                                         <div class="modal-body">
-                                                            <form id="downloadForm" th:action="@{/list/download}" method="GET">
+                                                            <form id="confirmForm" th:action="@{/list/download}" method="GET">
                                                                 <div class="form-group">
                                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                                 </div>
