--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -31,7 +31,7 @@
 
                                             <!-- Modal -->
                                             <div class="modal fade" id="myModal" role="dialog">
-                                                <div class="modal-dialog">
+                                                <div class="modal-dialog modal-sm">
 
                                                     <!-- Modal content-->
                                                     <div class="modal-content">
