bootstrap-dialog-buttons

--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -45,8 +45,9 @@
                                                                 <div class="form-group">
                                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                                 </div>
-                                                                <input class="btn btn-success btn-block" name="confirmDownload" type="submit" value="Confirm"/>
-                                                            </form>
+                                                                <div class="bootstrap-dialog-buttons">
+                                                                    <input class="btn btn-success btn-block" name="confirmDownload" type="submit" value="Confirm"/>
+                                                                </div>                                                            </form>
                                                         </div>
                                                         <div class="modal-footer">
                                                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
