--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -45,7 +45,9 @@
                                                                 <div class="form-group">
                                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                                 </div>
-                                                                <input class="btn btn-success btn-block" name="confirmDownload" type="submit" value="Confirm"/>
+                                                                <div class="bootstrap-dialog-buttons">
+                                                                    <input class="btn btn-success btn-block" name="confirmDownload" type="submit" value="Confirm"/>
+                                                                </div>
                                                             </form>
                                                         </div>
                                                         <div class="modal-footer">
