--- a/src/main/resources/templates/inpros.html
+++ b/src/main/resources/templates/inpros.html
@@ -46,7 +46,7 @@
                                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                                 </div>
                                                                 <div class="bootstrap-dialog-buttons">
-                                                                    <input class="btn btn-success btn-block" name="confirmDownload" type="submit" value="Confirm"/>
+                                                                    <button class="btn btn-success btn-block" name="confirmDownload" type="submit" value="Confirm">Confirm</button>
                                                                 </div>
                                                             </form>
                                                         </div>
