--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -41,7 +41,7 @@
                                                             <h4 class="modal-title">Download bibtex</h4>
                                                         </div>
                                                         <div class="modal-body">
-                                                            <form id="downloadForm" th:action="@{/list/download}" method="GET">
+                                                            <form id="downloadForm" th:action="@{book/{bookId}/download(bookId=${book.id})}" method="GET">
                                                                 <div class="form-group">
                                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                                 </div>
