All inpros, books and articles can now be downloaded in one file separately

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -13,7 +13,7 @@
                             <div class="form-group">
                                 <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                             </div>
-                            <input class="btn btn-success btn-block" type="submit"/>
+                            <input class="btn btn-success btn-block" type="submit" value="Download all"/>
                         </form>
                         <div class="table-responsive">
                             <table class="table">
