--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -30,8 +30,9 @@
                                                 <div class="form-group">
                                                     <input class="form-control"  type="text" name="fileName" value="bibtex"/>
                                                 </div>
-                                                <input class="btn btn-success btn-block" type="submit" value="Download"/>
+                                                <input class="btn btn-success btn-block" type="submit" value="Download"/>                                                 
                                             </form>
+                                            <form id="downloadForm" th:action="@{article/{articleId}/edit(articleId=${article.id})}" method="GET"><input class="btn btn-success btn-block" type="submit" value="Edit"/></form>
                                         </td>
                                     </tr>
                                 </tbody>
